2002-11-02 Tim Miller <tim_miller@users.sourceforge.net> (1.0-b12)
	
	* Added support for the "new-album" command to GalleryComm2.
	* Corrected a small path problem in ImageUtils.

2002-10-28  Pierre-Luc Paour <gallery@paour.com> (1.0-b11)
	
	* Added client UI support for creating new albums.
	  The corresponding protocol support is not yet ready
	  so the button will remain disabled.
	* Added resizeToDefault property for resizing before upload with
	  protocol 1 and using default album size with protocol 2.

2002-10-19  Pierre-Luc Paour <gallery@paour.com> (1.0-b10)
	
	* Fixed adding a Gallery (broken in b9).
	* Added undetermined progress bar to Fetch Albums.

2002-10-11 Tim Miller <tim_miller@users.sourceforge.net> (1.0-b9)
	
	* NOTE: GR CAN BE RUN IN GR PROTO 2 MODE BY CHANGING THE 
	  protocolVersion IN THE PROPERTIES FILE.
	  THIS WILL ALL PAN OUT WITH THE NEXT CHECKIN -- GR WILL DYNAMICALLY 
	  BIND TO THE NEWEST SERVER PROTOCOL. FOR NOW, CAVEAT EMPTOR.
	* Made GalleryComm and interface, moved GalleryComm implementation to
	  GalleryComm1.java.
	* Created GalleryComm2.java, based on GalleryComm1.java to implement
	  version 2 of the GR protocol.
	* Moved status interaction between GalleryComm classes and MainFrame
	  to an interface (StatusUpdate).
	* Created a Swing-style adapter for StatusUpdate (StatusUpdateAdapter).
	* Changed several classes to use the URL type instead of passing URLs
	  around as Strings.
	* Added ability in PictureInspector to edit picture comments (since this is
	  supported in version 2 of the protocol).
	* Added permission support to the Album model object.
	* Added support for Albums actually being in a tree (this is supported
	  by proto version 2.
	* Updated Gallery Remote proto version 2 document to describe
	  user permission attributes (read, write, change, delete) on 
	  Album objects.
	* paour: Added support for resizing images based on server autoResize
	  size (only with protocol 2)