@@ -5,7 +5,7 @@
 # You can override these values in your remote.properties file
 
 #
-# --- Protocol version (experimental, temporary ---
+# --- Protocol version (experimental, temporary) ---
 #
 
 # soon, GR will be able to dynamically sense which version
@@ -100,6 +100,6 @@ updateUrlBeta=http://gallery.sourceforge.net/gallery_remote_version_check_beta.p
 #
 # --- Do not edit below this line ---
 #
-version=1.0b10
-releaseDate=2002/10/19
+version=1.0b11
+releaseDate=2002/11/04
 aboutText=Gallery Remote\n \n \nA part of the Gallery Open-Source Project\nhttp://gallery.sourceforge.net\n \n \nMaintained by Pierre-Luc Paour\n \nInitial version by Chris Smith\n \n \nContributors:\n \nDolan Halbrook\nTim Miller
